--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 # N8N Workflows API Dependencies
 # Core API Framework
-fastapi>=0.104.0,<1.0.0
-uvicorn[standard]>=0.24.0,<1.0.0
-pydantic>=2.4.0,<3.0.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pyyaml>=5.4.1
+python-dotenv>=0.19.0
+slowapi>=0.1.4
+typing-extensions>=4.0.0
